# ai_project_template

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICK_GITHUB_SETUP.md  README.md  agents.md
.ai_platform_architecture/: CLINE_AND_ROO_CODE.md  GEMINI.md  WINDSURF.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/skills/youtube-video-analysis/mcp/: .env.example  EXAMPLES.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  server.py
.claude/skills/youtube-video-analysis/mcp/tools/: __init__.py  analyze_video.py  compare_videos.py  extract_code.py  get_transcript.py  search_videos.py
.cline/: README.md  settings.json
.fstrent_spec_tasks/: PLAN.md  PROJECT_CONTEXT.md  TASKS.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.roo-code/: README.md  settings.json
.windsurf/: README.md
claude_code_research/: claude-code-project-structure.md
docs/: 20251019_105349_Cursor_SETUP_SUMMARY.md  20251019_110512_Cursor_CLAUDE_CODE_ADAPTATION_PLAN.md  20251019_120828_Cursor_TASK007_COMPLETION_SUMMARY.md  20251019_121747_Cursor_CLAUDE_CODE_PLUGIN_NOTES.md  20251019_122338_Cursor_TASK_EXPANDER_AGENT_GUIDE.md  20251019_125753_Cursor_CURSOR_COMPATIBILITY_GUIDE.md  20251019_142459_Cursor_TASK018_COMPLETION_SUMMARY.md  20251019_151826_Cursor_PUBLIC_REPO_MIGRATION.md  20251019_160754_Cursor_YOUTUBE_SKILL_ENHANCEMENT_SUMMARY.md  20251019_161145_Cursor_HANX_TOOLS_ANALYSIS_SUMMARY.md  20251019_161412_Cursor_HANX_TOOLS_TASK_CREATION_SUMMARY.md  20251019_163835_Cursor_HANX_TOOLS_REVISED_ANALYSIS.md  (+30 more)
(+430 files in other folders)
